test/core/errors/templates_error/zs/instantiate_duplicated_via_import_error.zs
package instantiate_duplicated_via_import_error;

import instantiate_duplicated_via_import_error.pkg.*;

instantiate Test<uint32> U32Test;
